--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -17,5 +17,6 @@
     <h1>Page d'accueil</h1>
     <ion-button lines="full" routerLink="/add-annonce">Ajouter une annonce</ion-button>
     <ion-button lines="full" routerLink="/list-annonces">listes des annonces</ion-button>
+    <ion-button lines="full" routerLink="/list-posts">resultat API</ion-button>
   </div>
 </ion-content>
